# uplyft

./: .gitignore  README.md
backend/: Makefile  pyproject.toml
backend/api/: models.py  urls.py  views.py
backend/backend/: settings.py  urls.py
backend/products/: models.py  utils.py  views.py
backend/products/management/commands/: populate_products.py
backend/users/: models.py
